--- a/courses/templates/topic/index.html
+++ b/courses/templates/topic/index.html
@@ -1,6 +1,6 @@
-{% extends 'home.html' %}
+{% extends 'subject/index.html' %}
 
-{% load static i18n permission_tags professor_access %}
+{% load static i18n permission_tags professor_access django_bootstrap_breadcrumbs %}
 
 
 {% block javascript %}
@@ -12,18 +12,8 @@
 
 
 {% block breadcrumbs %}
-
-	<ol class="breadcrumb">
-	  	<li><a href="{% url 'app:index' %}">{% trans 'Home' %}</a></li>
-	  	<li><a href="{% url 'course:view_subject' subject.slug %}">{{ subject }}</a></li>
-			{% professor_subject subject user as maneger_topic%}
-			{% if maneger_topic %}
-	  		<li class="active">{% trans 'Manage Topic' %}</li>
-	  	{% else %}
-	  		<li class="active">{{ topic.name }}</li>
-	  	{% endif %}
-
-	</ol>
+    {{ block.super }}
+    {% breadcrumb topic.name 'course:view_topic' %}
 {% endblock %}
 
 {% block content %}
