Included translation tag for search courses placehold[Issue:#398]

--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -26,7 +26,7 @@
     <form id="searchform" method="get" accept-charset="utf-8">
         <div class="input-group">
           <div class="form-group is-empty">
-          <input type="text" class="form-control" placeholder="Search Courses" name="q"></div>
+          <input type="text" class="form-control" placeholder="{% trans 'Search for Courses' %}" name="q"></div>
             <span class="input-group-btn input-group-sm">
               <button type="submit" class="btn btn-fab btn-fab-mini">
                 <i class="fa fa-search" aria-hidden="true"></i>
