Font awesome in icon file #405

--- a/courses/templates/topic/list_file.html
+++ b/courses/templates/topic/list_file.html
@@ -2,7 +2,7 @@
 
 	<div id="list-topic{{ topic.id }}-files">
 		{% for file in files %}
-	  		<li id="file_{{ file.slug }}"><i class="material-icons">{{ file.file_type.icon }}</i> <a href="{% url 'course:file_material_view' file.slug %}" target="_blank">{{ file.name }}</a></li>
+	  		<li id="file_{{ file.slug }}"><i class="fa {{ file.file_type.icon }}"></i> <a href="{% url 'course:file_material_view' file.slug %}" target="_blank">{{ file.name }}</a></li>
 		{% endfor %}
 	</div>
 
