--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,59 +5,16 @@
 {% block javascript %}
     {% if page_obj %}
         <script type="text/javascript">
-            {% if page_obj and paginator %}
-                var pageNum = {{ page_obj.number }}; // The latest page loaded
-                var numberPages = {{ paginator.num_pages }}; // Indicates the number of pages
-            {% else %}
-                var pageNum = 0 ; // The latest page loaded
-                var numberPages = 0 ; // Indicates the number of pages
-            {% endif %}
-
-            var baseUrl = '{% url "app:index" %}';
-
-            // loadOnScroll handler
-            var loadOnScroll = function() {
-               // If the current scroll position is past out cutoff point...
-                if ($(window).scrollTop() >= $(document).height() - $(window).height() - 10) {
-                    // temporarily unhook the scroll event watcher so we don't call a bunch of times in a row
-                    $(window).unbind();
-                    // execute the load function below that will visit the view and return the content
-                    loadItems();
-                }
-            };
-
-            var loadItems = function() {
-                // Check if page is equal to the number of pages
-                if (pageNum == numberPages) {
-                    return false
-                }
-                // Update the page number
-                pageNum = pageNum + 1;
-
-                $("#loading").show();
-                // Configure the url we're about to hit
-                setTimeout(function (){
-                    $.ajax({
-                        url: baseUrl,
-                        data: {'page': pageNum},
-                        success: function(data) {
-                            $("#loading").hide();
-
-                            $("#timeline").append(data);
-                        },
-                        complete: function(data, textStatus){
-                            // Turn the scroll monitor back on
-                            $(window).bind('scroll', loadOnScroll);
-                        }
-                    });
-                }, 1000)
-            };
-
-            $(document).ready(function(){
-               $(window).bind('scroll', loadOnScroll);
-               $.material.init();
-            });
+          {% if page_obj and paginator %}
+            var pageNum = {{ page_obj.number }}; // The latest page loaded
+            var numberPages = {{ paginator.num_pages }}; // Indicates the number of pages
+          {% else %}
+            var pageNum = 0 ; // The latest page loaded
+            var numberPages = 0 ; // Indicates the number of pages
+          {% endif %}
+          var baseUrl = '{% url "app:index" %}';
         </script>
+        <script type="text/javascript" src="{% static 'js/home.js' %}"></script>
     {% endif %}
 {% endblock %}
 
@@ -96,7 +53,7 @@
 
               {% endblock %}
                 {% if user|has_role:'system_admin' %}
-                    
+
                     <li>
                       <a href="#menu_users" class="accordion" data-toggle="collapse">{% trans 'Users' %}<span class="pull-right glyphicon glyphicon-chevron-down"></span></a>
                       <div id="menu_users" class="collapse">
@@ -104,9 +61,9 @@
                           <li> <a href="{% url 'users:manage' %}">{% trans 'Manage Users' %}</a></li>
                           <li> <a href="{% url 'users:create' %}">{% trans 'Create User' %}</a></li>
                         </ul>
-                      </div> 
+                      </div>
                     </li>
-                    <li> 
+                    <li>
                       <a href="#menu_settings" class="accordion" data-toggle="collapse">{% trans 'Settings' %}<span class="pull-right glyphicon glyphicon-chevron-down"></span></a>
                       <div id="menu_settings" class="collapse">
                         <ul class="nav nav-pill nav-stacked accordion_list">
