--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -23,30 +23,36 @@
 {% block content %}
 
   <div class="col-md-12 cards-content">
-    <div class="panel panel-info">
-      <div class="panel-heading course-detail">
-        <div class="row">
-          <div class="col-xs-8 col-md-11 .titleTopic-detail">
-            <h4>{{course.name}}</h4>
-          </div>
-          {% if user|has_role:'professor' or user|has_role:'system_admin' %}
-            <div class="col-xs-4 col-md-1" id="divMoreActions">
+    <div class="group course-card ">
+      <div class="panel panel-info">
+        <div class="panel-heading course">
+          <div class="row">
+            <div class="col-xs-6 col-md-6 titleTopic">
+                <h4>{{course.name}}</h4>
+            </div>
+            {% if user|has_role:'professor' or user|has_role:'system_admin' %}
+            <div class="col-xs-6 col-md-6 divMoreActions" >
               <div class="btn-group">
                 <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
-                <div class="ripple-container"></div></button>
+                 </button>
                 <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
-                  <li><a href="{% url 'course:replicate_course' course.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Replicate" %}</a></li>
-                  <li><a href="{% url 'course:update' course.slug %}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Edit" %}</a></li>
-                  <li><a href="javascript:javascript:delete_course('{% url 'course:delete' course.slug %}', '{{ course.slug }}', '{% trans "Are you sure you want to delete this course?" %}', '{% url 'course:manage' %}')" data-toggle="modal" data-target="#myModal2"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Remove" %}</a></li>
+                  <li><a href="{% url 'course:replicate_course' course.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
+                  <li><a href="{% url 'course:update' course.slug %}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
+                  <li><a href="javascript:delete_course.get('{% url 'course:delete' course.slug %}','#course','#modal_course')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
                 </ul>
               </div>
             </div>
+            {% elif user|has_role:'student' %}
+            {% if not request.user in course.students.all %}
+              <a onclick="subscribe($(this), '{% url 'course:subscribe' course.slug %}', {{ course.id}}, '{% trans 'Are you sure you want to subscribe to this course?' %}')"><button class="btn btn-sm btn-primary btn-raised pull-right">{% trans 'Subscribe' %}</button></a>
+            {% endif %}
           {% endif %}
+        </div>
       </div>
-    </div>
-    <div class="panel-body">
-      <p><b>{% trans 'Coordinator' %}: </b>{{course.coordenator}}</p>
+      <div class="panel-body">
+        <p><b>{% trans 'Coordinator' %}: </b>{{course.coordenator}}</p>
+      </div>
     </div>
   </div>
 
@@ -70,18 +76,18 @@
 </div>
 
 <div class="panel-group ui-accordion ui-widget ui-helper-reset ui-sortable" id="accordion" role="tablist" aria-multiselectable="false"></div>
-<div class="cards-detail">
+  <div class="cards-detail">
     {% for subject in subjects %}
         <div class="panel panel-default panel_{{ subject.id }}">
           <div class="panel-heading heading_{{subject.id}} subject ui-sortable-handle">
             <div class="row">
-                <div class="col-xs-9 col-md-10 titleTopic">
+                <div class="col-xs-9 col-md-6 titleTopic">
                   <a role="button" href="{% url 'course:view_subject' subject.slug %}">
                     <h4>{{subject.name}}</h4>
                   </a>
                 </div>
                 {% if user|has_role:'professor' or user|has_role:'system_admin' %}
-                  <div class="col-xs-3 col-md-1" id="divMoreActions">
+                  <div class="col-xs-3 col-md-6 divMoreActions">
                     <div class="btn-group">
                       <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
