--- a/courses/templates/subject/index.html
+++ b/courses/templates/subject/index.html
@@ -19,14 +19,13 @@
 
 {% block content %}
   <div class="panel panel-info">
-    <div class="panel-heading course-detail">
+    <div class="panel-heading course">
       <div class="row">
-        <div class="col-md-10 col-sm-10">
+        <div class="col-xs-6 col-md-6 titleTopic">
           <h4>{{subject}}</h4>
         </div>
-
         {# dropdown de subject com as opções de replicar, editar e deletar #}
-        <div class="col-xs-4 col-md-2 divMoreActions">
+        <div class="col-xs-6 col-md-6 divMoreActions">
           {% professor_subject subject user as subject_professor%}
           {% if subject_professor %}
           <div class="btn-group">
@@ -41,10 +40,8 @@
           </div>
           {% endif %}
         </div>
-
       </div>
     </div>
-
     {# informações do subject(professor, descrição etc) #}
     <div class="panel-body">
       <p><b>{% trans "Professor" %}:</b> {% for professor in subject.professors.all %}{% if not forloop.first %},{% endif %}
@@ -62,7 +59,6 @@
         </div>
       </div>
     </div>
-
   </div>
 
   {# lista de tópicos #}
