--- a/core/static/css/base/amadeus.css
+++ b/core/static/css/base/amadeus.css
@@ -406,7 +406,7 @@ ul, li {
 .divMoreActions {text-align: right; height: 59px; float: right;}
 .moreAccordion {height: 59px;}
 /*.divMoreActions div button {padding-left: 10px; padding-right: 10px; padding-bottom: 10px; margin-bottom: 4px; height: 31px;}*/
-.divMoreActions , .moreAccordion{padding-top: 5px; padding-bottom: 5px;}
+.divMoreActions , .moreAccordion{padding-top: 5px; padding-bottom: 1%;}
 .moreAccordion button{margin-bottom: 0px; margin-top: 8px;}
 .titleTopic {padding-top: 10px; padding-bottom: 10px;}
 .titleTopic a h4, .titleTopic h4{color: white;}
