Fixing bug on create category [Issue #414]

--- a/courses/templates/category/create.html
+++ b/courses/templates/category/create.html
@@ -19,7 +19,7 @@
 							<label for="{{ field.auto_id }}">{{ field.label }}</label>
 							{% render_field field class='form-control input-sm' %}
 						</div>
-						{% if field.errors.length > 0 %}
+						{% if field.errors%}
 							<div class="alert alert-danger alert-dismissible" role="alert">
 								<ul>
 									{% for error in field.errors %}
