Guia do Breadcrumbs [PT-BR] #459

--- a/courses/templates/course/update.html
+++ b/courses/templates/course/update.html
@@ -5,7 +5,7 @@
 
 {% block breadcrumbs %}
 	{{ block.super }}
-	 {% breadcrumb 'Update' 'course:update' %}
+	 {% breadcrumb 'Update' 'course:update'  course.slug %}
 {% endblock %}
 {% block content %}
 
