--- a/courses/templates/subject/create.html
+++ b/courses/templates/subject/create.html
@@ -4,7 +4,7 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb 'Create subject' 'course:create_subject' %}
+    {% breadcrumb 'Create subject' 'course:create_subject' course.slug %}
 {% endblock breadcrumbs %}
 
 {% block content %}
