--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -47,7 +47,7 @@
 
 	<!--Javascript block for specific-app ones -->
 	<script src="{% static 'js/base/amadeus.js' %}"></script>
-      <script src="{% static 'js/main.js' %}"></script>
+  <script src="{% static 'js/main.js' %}"></script>
 	{% block style %}
 	{% endblock %}
 	{% block javascript %}
@@ -120,6 +120,8 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+        {% block test %}
+        {% endblock %}
         {% block sidebar %}
         {% endblock %}
       </div>
