--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -33,16 +33,16 @@
         <div class="panel-heading">
             <h4>{% trans 'Menu' %}</h4>
         </div>
-        <div class="panel-body">
+        <div class="panel-body menu-lateral">
             <ul class="nav nav-pills nav-stacked">
               <li>
                   <a href="#menu_courses" class="accordion" data-toggle="collapse">{% trans 'Courses' %}<span class="pull-right glyphicon glyphicon-chevron-down"></span></a>
                   <div id="menu_courses" class="collapse">
                       <ul class="nav nav-pill nav-stacked accordion_list">
-                        <li><a href="{% url 'course:manage' %}"> {% trans 'My Courses' %} </a></li>
-                        <li><a href="{% url 'course:all_courses' %}"> {% trans 'All Courses' %} </a></li>
+                        <li><a href="{% url 'course:manage' %}"><i class="fa fa-book" aria-hidden="true"></i> {% trans 'My Courses' %} </a></li>
+                        <li><a href="{% url 'course:all_courses' %}"><i class="fa fa-globe" aria-hidden="true"></i> {% trans 'All Courses' %} </a></li>
                         {% if user|has_role:'system_admin' or user|has_role:'professor'%}
-                          <li><a href="{% url 'course:manage_cat' %}">{% trans 'List Category' %}</a></li>
+                          <li><a href="{% url 'course:manage_cat' %}"><i class="fa fa-list" aria-hidden="true"></i> {% trans 'List Category' %}</a></li>
                           <li><a href="{% url 'course:create' %}">{% trans 'Create Course' %}</a></li>
                           <li><a href="{% url 'course:create_cat' %}">{% trans 'Create Category' %}</a></li>
                         {% endif %}
@@ -58,8 +58,8 @@
                       <a href="#menu_users" class="accordion" data-toggle="collapse">{% trans 'Users' %}<span class="pull-right glyphicon glyphicon-chevron-down"></span></a>
                       <div id="menu_users" class="collapse">
                         <ul class="nav nav-pill nav-stacked accordion_list">
-                          <li> <a href="{% url 'users:manage' %}">{% trans 'Manage Users' %}</a></li>
-                          <li> <a href="{% url 'users:create' %}">{% trans 'Create User' %}</a></li>
+                          <li> <a href="{% url 'users:manage' %}"><i class="fa fa-users" aria-hidden="true"></i>  {% trans 'Manage Users' %}</a></li>
+                          <li> <a href="{% url 'users:create' %}"><i class="fa fa-user-plus" aria-hidden="true"></i>  {% trans 'Create User' %}</a></li>
                         </ul>
                       </div>
                     </li>
@@ -67,9 +67,9 @@
                       <a href="#menu_settings" class="accordion" data-toggle="collapse">{% trans 'Settings' %}<span class="pull-right glyphicon glyphicon-chevron-down"></span></a>
                       <div id="menu_settings" class="collapse">
                         <ul class="nav nav-pill nav-stacked accordion_list">
-                            <li> <a href="{% url 'app:settings' page='system' %}">{% trans "System" %}</a></li>
-                            <li> <a href="{% url 'app:settings' page='mail_sender' %}">{% trans "Mail Sender" %}</a></li>
-                            <li> <a href="{% url 'app:settings' page='security' %}">{% trans "Security" %}</a></li>
+                            <li> <a href="{% url 'app:settings' page='system' %}"><i class="fa fa-cog" aria-hidden="true"></i> {% trans "System" %}</a></li>
+                            <li> <a href="{% url 'app:settings' page='mail_sender' %}"><i class="fa fa-envelope" aria-hidden="true"></i> {% trans "Mail Sender" %}</a></li>
+                            <li> <a href="{% url 'app:settings' page='security' %}"><i class="fa fa-shield" aria-hidden="true"></i> {% trans "Security" %}</a></li>
                         </ul>
                       </div>
                     </li>
