--- a/courses/templates/topic/delete.html
+++ b/courses/templates/topic/delete.html
@@ -7,14 +7,14 @@
       <!-- Modal Header -->
       <div class="modal-header">
 
-        <h4 class="modal-title" id="{{topic.slug}}_delete">{% trans "Delete Course" %}</h4>
+        <h4 class="modal-title" id="{{topic.slug}}_delete">{% trans "Delete Topic" %}</h4>
       </div>
       <!-- Modal Body -->
       <div class="modal-body">
         <!-- Put ONLY your content here!!!  -->
 		<form id="delete_topic_{{topic.slug}}" action="" method="post">
 		  {% csrf_token %}
-		    <p>{% trans 'Are you sure you want to delete the subject' %} "{{subject.name}}"?</p>
+		    <p>{% trans 'Are you sure you want to delete the topic' %} "{{topic.name}}"?</p>
 		</form>
       </div>
       <!-- Modal Footer -->
@@ -22,12 +22,6 @@
         <!-- Don't remove that!!!  -->
         <button type="button" class="btn btn-default btn-raised" data-dismiss="modal">{% trans "Close" %}</button>
         <button type="submit" id="button" form="delete_topic_{{topic.slug}}" class="btn btn-primary btn-raised">{% trans "Delete" %}</button>
-		<script>
-		  $("#delete_topic_{{topic.slug}}").submit(function(event) {
-		    RemoveCourse.remove("{% url 'course:delete_subject' subject.slug %}",$(this).serialize(),"#subject_{{subject.slug}}");
-		    event.preventDefault();
-		  });
-		</script>
       </div>
     </div>
   </div>
