--- a/courses/templates/category/update.html
+++ b/courses/templates/category/update.html
@@ -14,12 +14,9 @@
 {% block content %}
 	{% if messages %}
 		{% for message in messages %}
-			<div class="alert alert-success alert-dismissible" role="alert">
-				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-				<p>{{ message }}</p>
-			</div>
+    <script type="text/javascript">
+      alertify.success('{{message}}');
+    </script>
 		{% endfor %}
 	{% endif %}
 	<div class="card card-content">
@@ -29,7 +26,7 @@
 				{% for field in form %}
 					<div class="form-group {% if form.has_error %}has-error{% endif %}">
 						<label for="{{ field.auto_id }}">{{ field.label }}</label>
-						{% render_field field class='form-control input-sm' %}
+						{% render_field field class='form-control' %}
 					</div>
 					{% if field.errors.length > 0 %}
 						<div class="alert alert-danger alert-dismissible" role="alert">
