--- a/courses/templates/course/course_card.html
+++ b/courses/templates/course/course_card.html
@@ -1,5 +1,5 @@
 {% load static i18n permission_tags %}
-<div class="group  course-card ">
+<div class="group  course-card " id="course_{{course.slug}}">
     <div class="panel panel-info">
         <div class="panel-heading course">
           <div class="row">
@@ -17,7 +17,7 @@
                   <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
                     <li><a href="{% url 'course:replicate_course' course.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
                     <li><a href="{% url 'course:update' course.slug %}"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
-                    <li><a href="javascript:delete_course.get('{% url 'course:delete' course.slug %}','#course','#modal_course')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
+                    <li><a href="javascript:delete_course.get('{% url 'course:delete' course.slug %}?view=index','#course','#modal_course')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
                   </ul>
                 </div>
             </div>
@@ -30,23 +30,3 @@
         </div>
     </div>
 </div>
-
-<div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title">{% trans 'Repicate Course' %}</h4>
-            </div>
-            <div class="modal-body">
-                <section>
-                    <div class="course_replicate_form"></div>
-                </section>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger btn-raised" data-dismiss="modal">{% trans 'Close' %}</button>
-                <button type="button" onclick="$('#course_replicate').submit();" class="btn btn-primary btn-raised">{% trans 'Create' %}</button>
-            </div>
-        </div>
-    </div>
-</div>
- <script type="text/javascript" src="{% static 'js/course.js' %}"></script>
