--- a/files/templates/files/update_file.html
+++ b/files/templates/files/update_file.html
@@ -15,16 +15,6 @@
                 <!-- Card -->
                     <form class="form-horizontal" method="post" id="form-update-file" enctype="multipart/form-data">
                     {% csrf_token %}
-                        {% if messages %}
-                            {% for message in messages %}
-                                <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
-                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                    <p>{{ message }}</p>
-                                </div>
-                            {% endfor %}
-                        {% endif %}
                         <fieldset>
                             {% for field in form %}
                                 <div class="form-group is-empy{% if form.has_error %} has-error {% endif %} is-fileinput">
@@ -106,6 +96,7 @@
                     $('#fileUpdateModal').modal('hide');
                     $('#file_edit_{{ file.slug }}').replaceWith(data);
                     $('#file_{{ file.slug }}').replaceWith(data);
+                    alertify.success(" {% trans 'File successfully updated!' %} ");
                 },
                 error: function(data){
                     $('.erro-update').html(data.responseText);
