--- a/courses/templates/subject/create.html
+++ b/courses/templates/subject/create.html
@@ -15,11 +15,19 @@
         {% csrf_token %}
         {% for field in form %}
         <div class="form-group {% if field.errors %} has-error{% endif %}">
-          <label for="{{ field.auto_id }}" class="control-label label-static"> {{ field.label }}</label>
+          {% if field.auto_id != 'id_visible' %}
+            <label for="{{ field.auto_id }}"> {{ field.label }}</label>
+          {% endif %}
           {% if field.auto_id == 'id_init_date' or field.auto_id == 'id_end_date'%}
               <input type="text" class="form-control date-picker" name="{{field.name}}" value="{{field.value|date:'SHORT_DATE_FORMAT'}}" min="{{now|date:'SHORT_DATE_FORMAT'}}">
+          {% elif field.auto_id == 'id_visible' %}
+						<div class="checkbox">
+							<label>
+									<input type="checkbox" name="{{field.name}}" {% if field.value %}checked="checked"{% endif %}><span class="checkbox-material"></span> {{field.name}}
+							</label>
+						</div>
           {% else %}
-              {% render_field field class='form-control' placeholder=field.label%}
+              {% render_field field class='form-control'%}
           {% endif %}
           <span class="help-block">{{ field.help_text }}</span>
         </div>
